fixed the cards spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,6 +3,10 @@
   
 }
 
+.card-container {
+  display:flex;
+  flex-wrap: wrap;
+}
 
 .navbar {
   padding: 10px; 
